# auh-realty-ontology

./: .env.example  .gitignore  CLAUDE.md  README.md  auh-realty-ontology-BLUEPRINT.md  pyproject.toml
src/auh_realty/ontology/: entities.py
